--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,11 +1,10 @@
 .header {
-  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 1000;
-  background: white;
-  padding: 25px 60px;
+  background: rgb(255, 255, 255);
+  padding: 15px 10px;
 }
 
 .container {
